--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
 hello
+[![Build Status](https://travis-ci.org/jiangren-mel-react-001/Group-A-MyPage.svg?branch=master)](https://travis-ci.org/jiangren-mel-react-001/Group-A-MyPage)
